tests/fixtures/positive/style/RedundantExplicitType.kt
package style

fun example() {
    val name: String = "hello"
    val count: Int = 42
    val flag: Boolean = true
}
