tests/fixtures/negative/style/StringShouldBeRawString.kt
package style

fun example() {
    val text = "hello\n"
}
